  |              point the client is assumed to be stable. Code that
  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.14.2.27 2003/05/17 21:14:19 bdragon Exp $
==========================================================================

2.9000
------

2.9005-484  new: x86: detect Athlon with Barton core (#3227)
            new: x86: detect Celeron with Tualatin core / brand id 1 (#3246)
            imp: x86: changed some preselected cores (#3233)
            new: sparc: rc5-72 assembly cores by Andreas Beckmann
            new: decunix: initial Lurk support
            chg: all: single-threaded clients now ignore numcpu/max-threads

2.9005-483  fix: x86: re-added SS-2 core - new version fixes bug #3187
            fix: ppc: no longer coredumps while resolving under Linux (#3213)
            new: ppc: support for Altivec under linux (#1349)
            new: sparc: optimized rc5-72 core by Didier Levet
            new: sparc/solaris: cpu detection
            new: ppc: faster non-Altivec rc5-72 core by Malcolm Howell
            new: 68k: optimized rc5-72 cores, now not only for AmigaOS
            fix: some: network cleanup failed during rare error condition
            new: ppc: two new rc5-72 non-Altivec cores by Malcolm Howell
            chg: ppc: more optimizations to rc5-72 cores by Didier Levet
            chg: ppc: ansi cores removed, asm cores are faster

2.9004-482  undo: x86: rc5-72 SS-2 core (Athlon optimized) removed due to 
                       reentrancy and stack problems (#3187)
            chg: some: rc5-72 ansi cores removed in favor of faster asm cores
            chg: x86: disabled dg-* cores (bswap instr) on i386/i486 (#2878)
